--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,13 @@
 sonar.projectKey=fajarrrX_rate-calculator
 sonar.organization=asdordigital
 
-sonar.php.coverage.reportPaths=coverage.xml
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=rate-calculator
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
