--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,34 +1,42 @@
-name: CI
+name: SonarQube Analysis
 
 on:
-  - pull_request
-  - push
-  
-jobs:
-  tests:
-      name: Tests
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
-      runs-on: ubuntu-latest
-      
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-          with:
-            fetch-depth: 0
-          
-        - name: Setup PHP with Xdebug
-          uses: shivammathur/setup-php@v2
-          with:
-            php-version: '8.1'
-            coverage: xdebug
-            
-        - name: Install dependencies with composer
-          run: composer update --no-ansi --no-interaction --no-progress
-          
-        - name: Run tests with phpunit/phpunit
-          run: vendor/bin/phpunit --coverage-clover=coverage.xml
-          
-        - name: SonarQube Scan
-          uses: SonarSource/sonarqube-scan-action@v4
-          env:
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+jobs:
+  sonar:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          tools: phpunit
+
+      - name: Install dependencies
+        run: composer install --no-interaction --prefer-dist
+
+      - name: Run tests with coverage
+        run: |
+          mkdir -p coverage
+          vendor/bin/phpunit --coverage-clover coverage/coverage.xml
+
+      - name: Verify Coverage File
+        run: ls -lah coverage/
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.php.coverage.reportPaths=coverage/coverage.xml
