--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,34 +1,64 @@
 name: CI
 
 on:
-  - pull_request
-  - push
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   
 jobs:
   tests:
-      name: Tests
-
-      runs-on: ubuntu-latest
+    name: Tests and SonarCloud Analysis
+    runs-on: ubuntu-latest
+    
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_DATABASE: laravel_test
+          MYSQL_ROOT_PASSWORD: password
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
       
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-          with:
-            fetch-depth: 0
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+        
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+          extensions: bcmath, ctype, fileinfo, json, mbstring, openssl, pdo, tokenizer, xml, mysql
+          coverage: xdebug
           
-        - name: Setup PHP with Xdebug
-          uses: shivammathur/setup-php@v2
-          with:
-            php-version: '8.1'
-            coverage: xdebug
-            
-        - name: Install dependencies with composer
-          run: composer update --no-ansi --no-interaction --no-progress
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+        
+      - name: Install dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
+        
+      - name: Generate application key
+        run: php artisan key:generate
+        
+      - name: Directory Permissions
+        run: chmod -R 755 storage bootstrap/cache
+        
+      - name: Create Database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
           
-        - name: Run tests with phpunit/phpunit
-          run: vendor/bin/phpunit --coverage-clover=coverage.xml
-          
-        - name: SonarQube Scan
-          uses: SonarSource/sonarqube-scan-action@v4
-          env:
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Execute tests
+        env:
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
+        run: php artisan test --coverage-clover=coverage.xml
+        
+      - name: Upload coverage to SonarCloud
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
