--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,13 +2,22 @@ sonar.projectKey=fajarrrX_rate-calculator
 sonar.organization=asdordigital
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=rate-calculator
-#sonar.projectVersion=1.0
-
+sonar.projectName=rate-calculator
+sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=app
+sonar.tests=tests
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+
+# Coverage
 sonar.php.coverage.reportPaths=coverage.xml
+
+# Exclusions
+sonar.exclusions=vendor/**,storage/**,bootstrap/cache/**,public/**,node_modules/**
+sonar.test.exclusions=tests/**
+
+# Language
+sonar.language=php
