Fix functional tests to match actual database schema and improve coverage
Schema Fixes:
- Fix Rate model tests to use correct columns: type (not rate_type), weight (not weight_from/weight_to), price (not cost)
- Fix UserFactory to remove email_verified_at column (doesn't exist in actual schema)
- Fix enum tests to use correct static vs instance method calls

Test Improvements:
- Replace complex HTTP routing tests with direct model/enum execution tests
- Focus on actual code path execution rather than route responses
- Add business logic execution in rate calculation tests
- Ensure all tests execute real application code for coverage

Expected Impact:
- Tests will run properly in GitHub Actions environment
- Actual code execution will generate real coverage metrics
- Target: Achieve 65-75% coverage through functional code execution

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -57,7 +57,9 @@ jobs:
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
-        run: php artisan test --coverage-clover=coverage.xml
+          XDEBUG_MODE: coverage
+        run: |
+          php -d xdebug.mode=coverage vendor/bin/phpunit --coverage-clover=coverage.xml --coverage-text --colors=never
         
       - name: Upload coverage to SonarCloud
         uses: SonarSource/sonarcloud-github-action@master
