--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,16 +11,6 @@ jobs:
     name: Tests and SonarCloud Analysis
     runs-on: ubuntu-latest
     
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_DATABASE: laravel_test
-          MYSQL_ROOT_PASSWORD: password
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-      
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -31,7 +21,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          extensions: bcmath, ctype, fileinfo, json, mbstring, openssl, pdo, tokenizer, xml, mysql
+          extensions: bcmath, ctype, fileinfo, json, mbstring, openssl, pdo, tokenizer, xml, sqlite3
           coverage: xdebug
           
       - name: Copy .env
