--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,7 +49,7 @@ jobs:
           DB_DATABASE: database/database.sqlite
           XDEBUG_MODE: coverage
         run: |
-          php -d xdebug.mode=coverage vendor/bin/phpunit --coverage-clover=coverage.xml --coverage-text --colors=never
+          php -d xdebug.mode=coverage vendor/bin/phpunit --configuration phpunit-coverage.xml --coverage-clover=coverage.xml --coverage-text --colors=never
         
       - name: Upload coverage to SonarCloud
         uses: SonarSource/sonarcloud-github-action@v2.3.0
